trunk/main/src/objects/TeamMember__c.object
<CustomObject>
    <fields>
        <fullName>TeamProfile__c</fullName>
        <label>Team Profile</label>
        <referenceTo>TeamProfile__c</referenceTo>
        <relationshipLabel>Team Members</relationshipLabel>
        <relationshipName>TeamMember</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TeamRole__c</fullName>
        <label>Team Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <label>Team</label>
        <referenceTo>Team__c</referenceTo>
        <relationshipLabel>Team Members</relationshipLabel>
        <relationshipName>TeamMembers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <type>Lookup</type>
    </fields>
    <label>Team Member</label>
    <nameField>
        <label>TeamMember Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Team Members</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>